crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__variants_120.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: variant_matrix(120).await
---
── reason #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── reason #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── reason #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── repo #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── repo #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── repo #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── icons #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── icons #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── width #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── width #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── width #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── rows #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── rows #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── triage #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── triage #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── triage #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── group #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── group #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and keyboard focus are r…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                                          6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details
