crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__variants_80.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: variant_matrix(80).await
---
── reason #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── reason #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── reason #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── repo #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── repo #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── repo #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── icons #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── icons #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── width #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── width #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── width #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── rows #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── rows #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── triage #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── triage #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── triage #2 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── group #0 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de

── group #1 ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                      4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, e…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                  6h
     team mentioned · discussion #7

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting de
